--- a/HAM/Technician/Study Pages/146.520 MHz.md
+++ b/HAM/Technician/Study Pages/146.520 MHz.md
@@ -17,4 +17,4 @@ There are national calling frequencies on other bands, but you don't need to rem
 
 #TestQuestion 
 #ImportantFreqs 
-
+#146_520MHz
